--- a/aorta/.project
+++ b/aorta/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>aorta</name>
+	<name>aorta_sim</name>
 	<comment></comment>
 	<projects>
 	</projects>
